--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -26,7 +26,7 @@ html,
 body {
   color: var(--white-2);
   background-color: var(--gray-6);
-  font-family: "JetBrains Mono", monospace;
+  font-family: 'Nunito', sans-serif;
   line-height: 2rem;
   background-color: var(--gray-5);
 }
