--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,300;0,400;0,800;1,100;1,300;1,400;1,800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
 :root {
   --gray-1: #3f3f3f;
