--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -222,3 +222,18 @@ nav {
     padding: 1.5rem;
   }
 }
+#splash{
+    padding: 40px;
+    position: relative;
+    margin: 20px 0 0 0;
+    height: 300px;
+    width: 1100px;
+  } .post{
+    width: 820px;
+    margin-left: auto;
+    margin-right: auto;
+  } p{
+    margin-bottom: 1.75em;
+    margin-left: auto;
+    margin-bottom: auto;
+  }
