--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -191,3 +191,18 @@ nav {
     font-size: 1rem;
   }
 }
+#splash{
+    padding: 40px;
+    position: relative;
+    margin: 20px 0 0 0;
+    height: 300px;
+    width: 1100px;
+  } .post{
+    width: 820px;
+    margin-left: auto;
+    margin-right: auto;
+  } p{
+    margin-bottom: 1.75em;
+    margin-left: auto;
+    margin-bottom: auto;
+  }
